--- a/Aprendo con Molly/colores.xaml
+++ b/Aprendo con Molly/colores.xaml
@@ -545,13 +545,13 @@
         	<Canvas.Background>
         		<ImageBrush ImageSource="floress.png"/>
         	</Canvas.Background>
-        	<MediaElement x:Name="video" HorizontalAlignment="Left" Height="364" VerticalAlignment="Top" Width="484" Canvas.Left="182.687" Canvas.Top="126"/>
+        	<MediaElement x:Name="video" HorizontalAlignment="Left" Height="364" VerticalAlignment="Top" Width="484" Canvas.Left="182.687" Canvas.Top="126" Visibility="Hidden"/>
         	<Button x:Name="btnJugar" Content="Button" HorizontalAlignment="Left" Height="39.826" Style="{DynamicResource btnJugarEfecto}" VerticalAlignment="Top" Width="137.388" Background="#FF377C07" Canvas.Left="808.964" Canvas.Top="335.982"/>
         	<Button x:Name="bntExcuchar" Content="Button" HorizontalAlignment="Left" Height="49.826" Style="{DynamicResource btnEscucharEfecto}" VerticalAlignment="Top" Width="137.388" Canvas.Left="696.964" Canvas.Top="414.982"/>
         	<Button x:Name="btnVer" Content="Button" HorizontalAlignment="Left" Height="33.826" Style="{DynamicResource btnVerEfect}" VerticalAlignment="Top" Width="68.722" Canvas.Left="866.076" Canvas.Top="439.204"/>
         	<Button x:Name="btnMinimiza" Content="Button" HorizontalAlignment="Left" Height="23.72" VerticalAlignment="Top" Width="25.011" Style="{DynamicResource Minimizar}" RenderTransformOrigin="-2.032,0.008" Canvas.Left="906.822" Canvas.Top="10"/>
         	<Button x:Name="btnCerrar" Content="Button" HorizontalAlignment="Left" Height="23.72" VerticalAlignment="Top" Width="25.011" Style="{DynamicResource BotonCerrar}" RenderTransformOrigin="-2.032,0.008" Canvas.Left="936.833" Canvas.Top="10"/>
-        	<Canvas x:Name="bolitas" HorizontalAlignment="Left" Height="300.018" VerticalAlignment="Top" Width="991.992" Canvas.Left="4.008" Canvas.Top="-12" Visibility="Hidden">
+        	<Canvas x:Name="bolitas" HorizontalAlignment="Left" Height="300.018" VerticalAlignment="Top" Width="991.992" Canvas.Left="4.008" Canvas.Top="-12">
         		<Button x:Name="blanco" Content="Button" HorizontalAlignment="Left" Height="57.78" VerticalAlignment="Top" Width="69" Style="{DynamicResource btnBlanco}" Canvas.Left="2" Canvas.Top="233.518" RenderTransformOrigin="0.5,0.5">
         			<Button.RenderTransform>
         				<TransformGroup>
@@ -731,17 +731,17 @@
         			</Button.Background>
         		</Button>
         	</Canvas>
-        	<Rectangle x:Name="espacioJuego" HorizontalAlignment="Left" Height="367.5" RadiusY="48" RadiusX="48" StrokeThickness="8" VerticalAlignment="Top" Width="476.5" Canvas.Left="182.687" Canvas.Top="227.5" Visibility="Hidden">
+        	<Rectangle x:Name="espacioJuego" HorizontalAlignment="Left" Height="367.5" RadiusY="48" RadiusX="48" StrokeThickness="8" VerticalAlignment="Top" Width="476.5" Canvas.Left="182.687" Canvas.Top="227.5">
         		<Rectangle.Fill>
         			<ImageBrush ImageSource="am.png"/>
         		</Rectangle.Fill>
         	</Rectangle>
-        	<Button x:Name="parar" Content="" Height="82.97" Canvas.Left="316" Canvas.Top="461.03" Width="88" BorderBrush="Transparent">
+        	<Button x:Name="parar" Content="" Height="82.97" Canvas.Left="316" Canvas.Top="461.03" Width="88" BorderBrush="Transparent" Visibility="Hidden">
         		<Button.Background>
         			<ImageBrush ImageSource="stop.png"/>
         		</Button.Background>
         	</Button>
-        	<Button x:Name="encender" Content="" Height="82.97" Canvas.Left="448" Canvas.Top="461.03" Width="88" BorderBrush="Transparent">
+        	<Button x:Name="encender" Content="" Height="82.97" Canvas.Left="448" Canvas.Top="461.03" Width="88" BorderBrush="Transparent" Visibility="Hidden">
         		<Button.Background>
         			<ImageBrush ImageSource="boyom.png"/>
         		</Button.Background>
